--- a/tarea/lista.html
+++ b/tarea/lista.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planetas</title>
+    <title>Lista</title>
 </head>
 <body>
-    <table id="Planetas"></table>
-    
+    <h1>Tarea de lista</h1>    
+
+    <ul id="comida"></ul>  
+    <script src="lista.js"></script>
+
 </body>
 </html>
