--- a/animacionPeones/index.html
+++ b/animacionPeones/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animación de PRUEBA</title>
+    <title>Animación de peones</title>
 </head>
 
 <body>
     <canvas id="miCanvas" width="550px" height="550px"></canvas>
-    <script src="movimientos2.js"></script>
+    <script src="movimientos.js"></script>
 </body>
 
 </html>
