animacion de peones

--- a/animacionPeones/index.html
+++ b/animacionPeones/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <canvas id="miCanvas" width="550px" height="550px"></canvas>
-    <script src="movimientos.js"></script>
+    <script src="descripcionMovimientos.js"></script>
 </body>
 
 </html>
